# test

./: .gitignore
ast_test/: README.md  index.js  input.js  package.json  pnpm-lock.yaml  tsconfig.json
ast_test/examples/: dead-code-input.js  unused-vars-input.js
ast_test/output/: dead-code-output.js  output.js
ast_test/src/: index.ts
ast_test/src/constants/: index.ts
ast_test/src/handlers/: dead-code-handler.ts  file-processor.ts  (+2 more)
ast_test/tests/: unused-vars-remover.js
cppStudy/: CMakeLists.txt  Log.cpp  Makefile  header.h  main.cpp  rebuild.sh  run.sh
cppStudy/review/: class.cpp  constructor.cpp  destructor.cpp  header.h  hello_world.cpp  inheritance.cpp  localStatic.cpp  pure_virtual_function.cpp  raw_pointer.cpp  virtual_function.cpp  visibility.cpp
demo/dom2canvas-demo/: canvas.html  dom.html
demo/pic2canvas-demo/: README.md  canvas.array.html  canvas.array.js  canvas.base64.js  canvas.differential.js  canvas.direct.js  canvas.downscale25.js  canvas.downscale50.js  canvas.html  canvas.js  canvas.min.js  canvas.quantized.js  canvas.unicode.html  canvas.unicode.js  helper.js  index.html  optimization-demo.html  optimize-helper.js  package.json  performance-test.js  test-unicode.html
pic2canvas/: README.md  index.ts  tsconfig.json
pic2canvas@Deprecated/: README.md  generator.ts  index.ts  package.json  tsconfig.json
tool-box/: .eslintrc.cjs  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
tool-box/src/: App.css  App.tsx  index.css
video2gif/: recorder-complex.html  recorder.html
(+32 files in other folders)
